--- a/manifest.json
+++ b/manifest.json
@@ -17,6 +17,7 @@
   "background": {
     "service_worker": "background.js"
   },
+  "options_page": "options.html",
   "content_scripts": [{
     "matches": ["<all_urls>"],
     "js": ["content.js"]
