4th commit: Improved UI and added basic Timer

--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,8 @@
   "permissions": [
     "activeTab",
     "storage",
-    "webNavigation"
+    "webNavigation",
+    "notifications"
   ],
   "action": {
     "default_popup": "popup/popup.html",
@@ -22,7 +23,13 @@
     "matches": ["<all_urls>"],
     "js": ["content.js"]
   }],
+  "web_accessible_resources": [
+    {
+      "resources": ["peaceful-nature.jpg", "water-stream.mp3"],
+      "matches": ["<all_urls>"]
+    }
+  ],
   "content_security_policy": {
-  "extension_pages": "script-src 'self'; object-src 'self';"
-}
+    "extension_pages": "script-src 'self'; object-src 'self';"
+  }
 }
